--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -6,7 +6,9 @@
  </head>
  <body>
    <h1>Create a Basketball Team!</h1>
-   <form method="POST" action="/team"></form>
+   <form method="POST" action="/team">
+     <p>Team Name: input</p>
+   </form>
  </body>
 </html>
 
