--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -7,7 +7,7 @@
  <body>
    <h1>Create a Basketball Team!</h1>
    <form method="POST" action="/team">
-     <p>Team Name: input</p>
+     <p>Team Name: input type="text"</p>
    </form>
  </body>
 </html>
