--- a/views/team.erb
+++ b/views/team.erb
@@ -6,6 +6,12 @@
  </head>
  <body>
   <h1>Team Name: <%= @team %></h1>
+  h1>Team Name: <%= @team %></h1>
+  h1>Team Name: <%= @team %></h1>
+  h1>Team Name: <%= @team %></h1>
+  h1>Team Name: <%= @team %></h1>
+  h1>Team Name: <%= @team %></h1>
+  h1>Team Name: <%= @team %></h1>
   
 
 
